sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PINs__c/Vendor_Invoice_PINs__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice PIN</label>
    <nameField>
        <displayFormat>VI-PIN-{000000}</displayFormat>
        <label>Vendor Invoice PINs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice PIN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>