sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PINs__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>PIN__r.c2g__OwnerCompany__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>