sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PINs__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>PIN__r.c2g__InvoiceTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount`</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>