sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PINs__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Vendor Invoice PIN</relationshipLabel>
    <relationshipName>Vendor_Invoice_PIN</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>